# mrclean

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/mrclean/: cli.py  paths.py  reports.py
src/mrclean/commands/: clean.py  dedupe.py  scan.py
tests/: __init__.py  test_paths.py  test_reports.py
