[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mrclean"
version = "0.1.0"
description = "CLI tool to identify and clean up unused files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
mrclean = "mrclean.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
